--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.22.3",
+    "tailwind-merge": "^2.3.0",
     "tesseract.js": "^5.1.0",
     "zod": "^3.23.4"
   },
