fix:motion effects

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_KEY=AIzaSyBTKJm68Pf1Ds-rr2oLpovR-Tnfjqmp1j4;
+VITE_API_KEY=AIzaSyBTKJm68Pf1Ds-rr2oLpovR-Tnfjqmp1j4
 VITE_API_AUTH_DOMAIN=smile-donation.firebaseapp.com
 VITE_API_PROJECT_ID=smile-donation
 VITE_API_STORAGE_BUCKET=smile-donation.appspot.com
