--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@mercadopago/sdk-react": "^0.0.19",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "class-variance-authority": "^0.7.0",
@@ -29,6 +31,7 @@
     "firebase-tools": "^13.8.0",
     "framer-motion": "^11.3.28",
     "lucide-react": "^0.376.0",
+    "mercadopago": "^2.0.15",
     "react": "^18.2.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.2.0",
