--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^18.2.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.22.3",
     "sonner": "^1.5.0",
