--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tesseract.js": "^5.1.0",
+    "usellm": "^0.13.0",
     "zod": "^3.23.4"
   },
   "devDependencies": {
