--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "@google/generative-ai": "^0.21.0",
     "@hookform/resolvers": "^3.3.4",
     "@mercadopago/sdk-react": "^0.0.19",
     "@radix-ui/react-accordion": "^1.2.1",
