--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-popover": "^1.1.1",
@@ -33,6 +34,7 @@
     "firebase": "^10.11.1",
     "firebase-tools": "^13.8.0",
     "framer-motion": "^11.3.28",
+    "i18next": "^24.2.1",
     "lucide-react": "^0.376.0",
     "mercadopago": "^2.0.15",
     "react": "^18.2.0",
@@ -40,6 +42,8 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.51.3",
+    "react-i18next": "^15.4.0",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.22.3",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
